Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-9706

Browsing for "OpenJDK path" in Android options does not work

XMLWordPrintable

      If you click on the "Browse" button next to "OpenJDK location" in the Android options, you get a dialog box which does not accept folders as input. The only way to edit the OpenJDK location is by manually inputting the path in the line edit.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dt Daniel Teske
            esabraha Eskil Abrahamsen Blomfeldt
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes