Android: JDK location is a directory, use correct file chooser dialog

Task-number: QTCREATORBUG-9706
Change-Id: I0a1892eb94024529cf450926dee22e629ef85e0b
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>